phoenix:Allow hiding the lock icon on lockscreen [2/2]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -622,4 +622,7 @@
     <!-- USB Configuration -->
     <string name="usb_default_config_title">USB configuration</string>
     <string name="usb_default_config_summary">Choose the default behavior when connected to a device via USB</string>
+    <!-- Lock icon -->
+    <string name="hide_lockicon_title">Hide lock icon</string>
+    <string name="hide_lockicon_summary">Hide the lock icon on lockscreen</string>
 </resources>
